--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -29,8 +29,8 @@
 
     <TextView
         android:id="@+id/password_tv"
-        android:layout_width="216dp"
-        android:layout_height="56dp"
+        android:layout_width="349dp"
+        android:layout_height="46dp"
         android:layout_marginBottom="244dp"
         android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,5 +38,18 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genera_password" />
+
+    <TextView
+        android:id="@+id/nist_result_tv"
+        android:layout_width="336dp"
+        android:layout_height="194dp"
+        android:layout_marginBottom="50dp"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genera_password"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
