--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -20,7 +20,7 @@
         android:id="@+id/genera_keys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="340dp"
+        android:layout_marginBottom="368dp"
         android:text="Generate and test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,15 +28,29 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/keys_tv"
-        android:layout_width="216dp"
-        android:layout_height="56dp"
+        android:id="@+id/password_tv"
+        android:layout_width="349dp"
+        android:layout_height="46dp"
         android:layout_marginBottom="244dp"
-        android:textSize="40dp"
+        android:textSize="20dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genera_keys" />
+        app:layout_constraintTop_toBottomOf="@+id/genera_keys"
+        app:layout_constraintVertical_bias="0.153" />
+
+    <TextView
+        android:id="@+id/nist_result_tv"
+        android:layout_width="326dp"
+        android:layout_height="271dp"
+        android:textSize="13dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genera_keys"
+        app:layout_constraintVertical_bias="0.711" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
