--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -20,25 +20,25 @@
         android:id="@+id/genera_keys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="368dp"
         android:text="Generate and test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/keys_tv"
-        android:layout_width="351dp"
-        android:layout_height="364dp"
-        android:layout_marginBottom="244dp"
+        android:layout_width="342dp"
+        android:layout_height="235dp"
         android:textAlignment="center"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.608"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genera_keys"
-        app:layout_constraintVertical_bias="0.153" />
+        app:layout_constraintVertical_bias="0.263" />
 
     <TextView
         android:id="@+id/nist_result_tv"
