--- a/app/src/main/res/layout/character_number_dialog.xml
+++ b/app/src/main/res/layout/character_number_dialog.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
@@ -6,13 +7,21 @@
 
     <EditText
         android:id="@+id/numero_caratteri"
-        android:inputType="number"
-        android:layout_width="match_parent"
+        android:layout_width="180dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="between 16 and 25" />
+        android:hint="between 16 and 25"
+        android:inputType="number"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:id="@+id/confirm_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm"
+        android:layout_gravity="right"/>
 
 </LinearLayout>
