--- a/app/src/main/res/layout/character_number_dialog.xml
+++ b/app/src/main/res/layout/character_number_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="between 16 and 25"
+        android:hint="from 17 to 25"
         android:inputType="number"
         android:layout_gravity="center"/>
 
